# mlbot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  memory.md  pyproject.toml
docs/: ALERTS.md  API_NOTES.md  COMMANDS.md  DEVELOPMENT.md
docs/tasks/: backlog.md
scripts/: deploy.ps1
src/mlb_irc_bot/: __init__.py  __main__.py  commands.py  config.py  irc_bot.py  irc_format.py  probe.py  scheduler.py  storage.py
src/mlb_irc_bot/alerts/: __init__.py  detectors.py  messages.py  state.py
src/mlb_irc_bot/mlb/: __init__.py  client.py  formatters.py  hydrate.py  models.py  teams.py
tests/integration/: test_mlb_client.py
tests/unit/: test_alert_detectors.py  test_commands.py  test_config.py  test_irc_bot.py  test_irc_format.py  test_scheduler.py  test_storage.py  test_teams.py
