[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-irc-bot"
version = "0.1.0"
description = "Async IRC bot for MLB schedules, live game updates, standings, and stats."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "httpx>=0.27.0",
  "ircrobots>=0.7.2",
  "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
  "ruff>=0.5.0",
]

[project.scripts]
mlb-irc-bot = "mlb_irc_bot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
